--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+/*
+ * Author Mthdht
+ * Style for index file
+ */
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
